--- a/app/src/main/res/layout/activity_field_statistics.xml
+++ b/app/src/main/res/layout/activity_field_statistics.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#F5F6F7">
 
     <com.wtcrmandroid.custompricing.TitleBar
         android:id="@+id/titlebar"
