--- a/app/src/main/res/layout/activity_mycard.xml
+++ b/app/src/main/res/layout/activity_mycard.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.wtcrmandroid.aboutmy.MycardActivity">
+    tools:context="com.wtcrmandroid.activity.aboutmy.MycardActivity">
 
     <com.wtcrmandroid.custompricing.TitleBar
         android:id="@+id/titlebar"
