--- a/app/src/main/res/layout/item_poppupwindow_title.xml
+++ b/app/src/main/res/layout/item_poppupwindow_title.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:id="@+id/rl_item">
+    android:id="@+id/rl_item"
+    android:background="#fff">
 
     <TextView
         android:id="@+id/tv_left"
