--- a/app/src/main/res/layout/popupwindow_title.xml
+++ b/app/src/main/res/layout/popupwindow_title.xml
@@ -4,15 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#fff">
+    android:background="#00000000">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#e9edf2"
+        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+
+        />
     <LinearLayout
         android:id="@+id/cancle_onlick"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="400dp"
+        android:minHeight="400dp"
         android:background="#40000000"
         android:orientation="vertical" />
 </LinearLayout>
