--- a/app/src/main/res/layout/activity_customer_call.xml
+++ b/app/src/main/res/layout/activity_customer_call.xml
@@ -133,31 +133,44 @@
                         android:layout_marginRight="10dp"
                         android:background="@mipmap/ic_xrz_yuyin" />
                 </LinearLayout>
-                <!--<LinearLayout-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content">-->
-                    <!--<com.wtcrmandroid.pulltorefresh.SwipeToLoadLayout-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="50dp"-->
-                        <!--android:layout_weight="1"-->
-                        <!--android:layout_marginLeft="10dp">-->
-                        <!--</com.wtcrmandroid.pulltorefresh.SwipeToLoadLayout>-->
-                    <!--<com.wtcrmandroid.pulltorefresh.SwipeToLoadLayout-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="50dp"-->
-                        <!--android:layout_weight="1">-->
-                        <!--</com.wtcrmandroid.pulltorefresh.SwipeToLoadLayout>-->
-                    <!--<com.wtcrmandroid.pulltorefresh.SwipeToLoadLayout-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="50dp"-->
-                        <!--android:layout_weight="1">-->
-                        <!--</com.wtcrmandroid.pulltorefresh.SwipeToLoadLayout>-->
-                    <!--<com.wtcrmandroid.pulltorefresh.SwipeToLoadLayout-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="50dp"-->
-                        <!--android:layout_weight="1"/>-->
-                    <!---->
-                <!--</LinearLayout>-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp">
+                        <com.wtcrmandroid.custompricing.SquareRelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="40dp">
+
+                        </com.wtcrmandroid.custompricing.SquareRelativeLayout>
+                        <com.wtcrmandroid.custompricing.SquareRelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="40dp">
+
+                        </com.wtcrmandroid.custompricing.SquareRelativeLayout>
+                        <com.wtcrmandroid.custompricing.SquareRelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="40dp">
+
+                        </com.wtcrmandroid.custompricing.SquareRelativeLayout>
+                        <com.wtcrmandroid.custompricing.SquareRelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="40dp">
+
+                        </com.wtcrmandroid.custompricing.SquareRelativeLayout>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp">
+
+                    </LinearLayout>
+                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
