--- a/app/src/main/res/layout/item_customer_call_situation.xml
+++ b/app/src/main/res/layout/item_customer_call_situation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#e9edf2">
+    android:background="#F7F7F7">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,7 +16,7 @@
             android:id="@+id/v_top"
             android:layout_width="1dp"
             android:layout_height="25dp"
-            android:background="#000" />
+            android:background="#c0c5d0" />
 
         <com.thinkcool.circletextimageview.CircleTextImageView
             android:id="@+id/ctiv_photo"
@@ -48,7 +48,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
-            android:background="#000" />
+            android:background="#c0c5d0" />
     </LinearLayout>
 
 
