--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -2,26 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
         <View
             android:id="@+id/v_top"
             android:layout_width="1dp"
-            android:layout_height="18dp"
-            android:background="#000" />
+            android:layout_height="10dp"
+            android:background="#c0c5d0" />
+
         <ImageView
             android:layout_width="8dp"
             android:layout_height="8dp"
             android:background="@mipmap/ic_gray_point" />
+
         <View
             android:id="@+id/v_bottom"
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#000" />
+            android:background="#c0c5d0" />
     </LinearLayout>
 
     <LinearLayout
@@ -31,7 +35,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="28dp"
             android:layout_marginLeft="15dp"
             android:gravity="center_vertical">
 
@@ -47,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:paddingBottom="15dp"
+            android:paddingBottom="10dp"
             android:text="郑州市御玺大厦附近"
             android:textColor="@color/colorContext"
             android:textSize="14sp" />
