--- a/app/src/main/res/layout/activity_customer_call.xml
+++ b/app/src/main/res/layout/activity_customer_call.xml
@@ -21,7 +21,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bt_submit">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -133,44 +134,15 @@
                         android:layout_marginRight="10dp"
                         android:background="@mipmap/ic_xrz_yuyin" />
                 </LinearLayout>
-                <LinearLayout
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp">
-                        <com.wtcrmandroid.view.custompricing.SquareRelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="40dp">
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:paddingBottom="30dp"/>
 
-                        </com.wtcrmandroid.view.custompricing.SquareRelativeLayout>
-                        <com.wtcrmandroid.view.custompricing.SquareRelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="40dp">
-
-                        </com.wtcrmandroid.view.custompricing.SquareRelativeLayout>
-                        <com.wtcrmandroid.view.custompricing.SquareRelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="40dp">
-
-                        </com.wtcrmandroid.view.custompricing.SquareRelativeLayout>
-                        <com.wtcrmandroid.view.custompricing.SquareRelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="40dp">
-
-                        </com.wtcrmandroid.view.custompricing.SquareRelativeLayout>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp">
-
-                    </LinearLayout>
-                </LinearLayout>
 
             </LinearLayout>
         </ScrollView>
