--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="TextHeight">42dp</dimen>
     <dimen name="text_size_16">16sp</dimen>
     <dimen name="text_size_13">13sp</dimen>
+    <dimen name="text_size_18">18sp</dimen>
 </resources>
