--- a/app/src/main/res/layout/activity_address_book_groups.xml
+++ b/app/src/main/res/layout/activity_address_book_groups.xml
@@ -9,9 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/titlebar_height" />
 
-    <ExpandableListView
+    <com.wtcrmandroid.view.SMExpandListView.SMRExpandView
         android:id="@+id/elv_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:groupIndicator="@null"/>
+        android:groupIndicator="@null" />
 </LinearLayout>
