--- a/app/src/main/res/layout/activity_contacts_department.xml
+++ b/app/src/main/res/layout/activity_contacts_department.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F7F7">
+    android:background="#F5F7F7"
+    android:orientation="vertical">
+
     <com.wtcrmandroid.view.custompricing.TitleBar
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/titlebar_height" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_view"
+
+    <ExpandableListView
+        android:id="@+id/elv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:groupIndicator="@null" />
 </LinearLayout>
