--- a/app/src/main/res/layout/item_contacts_child.xml
+++ b/app/src/main/res/layout/item_contacts_child.xml
@@ -11,7 +11,7 @@
         android:background="#fff">
 
         <com.thinkcool.circletextimageview.CircleTextImageView
-            android:id="@+id/ctiv_photo"
+            android:id="@+id/iv_head"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_vertical"
@@ -29,6 +29,7 @@
             android:paddingBottom="10dp">
 
             <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -37,6 +38,7 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/tv_department"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
