--- a/app/src/main/res/layout/item_contacts_group.xml
+++ b/app/src/main/res/layout/item_contacts_group.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:background="#fff"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:paddingBottom="10dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp">
 
     <TextView
         android:id="@+id/tv_department_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:text="移动技术部"
-        android:textColor="#2b2f33"
+        android:textColor="@color/colorIconText"
         android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/iv_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"
-        android:background="@mipmap/ic_graydown_arrow" />
+        android:src="@mipmap/ic_arrow_down" />
 </LinearLayout>
