--- a/app/src/main/res/layout/activity_my_journal.xml
+++ b/app/src/main/res/layout/activity_my_journal.xml
@@ -14,65 +14,16 @@
         android:layout_height="@dimen/titlebar_height">
     </com.wtcrmandroid.view.custompricing.TitleBar>
 
-    <LinearLayout
-        android:id="@+id/ll_below_titlebar"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:orientation="horizontal"
+
+    <com.wtcrmandroid.view.custompricing.TopChooseMenuBar
+        android:id="@+id/tcmb_bar"
         android:layout_below="@id/titlebar"
-        android:background="@android:color/white">
-
-        <LinearLayout
-            android:id="@+id/ll_myjournal_type"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="类型"
-                android:textSize="@dimen/Text36"
-                android:textColor="@color/colorIconText"/>
-
-            <ImageView
-                android:id="@+id/iv_type_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/ic_arrow_down"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_myjournal_time"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="时间"
-                android:textSize="@dimen/Text36"
-                android:textColor="@color/colorIconText"/>
-
-            <ImageView
-                android:id="@+id/iv_time_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:src="@mipmap/ic_arrow_down"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="44dp" />
 
     <com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout
         android:id="@+id/swipeToLoadLayout"
-        android:layout_below="@id/ll_below_titlebar"
+        android:layout_below="@id/tcmb_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -97,7 +48,7 @@
     </com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout>
 
     <FrameLayout
-        android:layout_below="@id/ll_below_titlebar"
+        android:layout_below="@id/tcmb_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
