--- a/app/src/main/res/layout/dialog_complete_condition.xml
+++ b/app/src/main/res/layout/dialog_complete_condition.xml
@@ -12,80 +12,141 @@
         android:textSize="15sp"
         android:textColor="@android:color/black"/>
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/ll_undone"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/colorBackground">
 
-            <TextView
-                android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/et_nocomplete_reason"
+                    android:textCursorDrawable="@drawable/edittext_cursor_shap"
+                    android:background="@color/colorBackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/nocomplete_reason"
+                    android:textSize="@dimen/Text36"
+                    android:padding="5dp"
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorBackground">
+
+                <EditText
+                    android:id="@+id/et_nocomplete_time"
+                    android:textCursorDrawable="@drawable/edittext_cursor_shap"
+                    android:background="@color/colorBackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/nocompelete_time"
+                    android:padding="5dp"
+                    android:textSize="@dimen/Text36"
+                    />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_done"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/colorBackground">
+
+            <EditText
+                android:id="@+id/et_complete_details"
+                android:padding="5dp"
+                android:background="@color/colorBackground"
+                android:textCursorDrawable="@drawable/edittext_cursor_shap"
+                android:textSize="@dimen/text_size_13"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:textColor="@android:color/black"
-                android:text="已完成"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:textColor="@android:color/black"
-                android:text="未完成"/>
-
-
+                android:hint="@string/complete_details"
+                />
 
         </LinearLayout>
 
         <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:orientation="vertical">
-
+            android:id="@+id/rg_complete"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
             <RadioButton
-
-                android:layout_width="wrap_content"
+                android:id="@+id/rb_done"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
+                android:button ="@null"
+                android:drawableRight="@drawable/selector_radiobutton_background"
+                android:text="已完成"
+                android:textColor="@drawable/selector_text_blue_realblack"
                 />
 
             <RadioButton
-                android:layout_width="wrap_content"
+                android:id="@+id/rb_undone"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
+                android:button ="@null"
+                android:drawableRight="@drawable/selector_radiobutton_background"
+                android:text="未完成"
+                android:textColor="@drawable/selector_text_blue_realblack"
                 />
-
 
         </RadioGroup>
 
+    </FrameLayout>
 
-    </RelativeLayout>
+
+
+
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="20dp">
 
-        <Button
-            android:id="@+id/bt_worksort_dialog_sure"
+        <TextView
+            android:id="@+id/tv_worksort_dialog_sure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
             android:background="@null"
-            android:text="确定"/>
+            android:text="确定"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/Text36"/>
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_toLeftOf="@id/bt_worksort_dialog_sure"
+            android:layout_marginRight="40dp"
+            android:layout_toLeftOf="@id/tv_worksort_dialog_sure"
             android:background="@null"
-            android:text="取消"/>
+            android:text="取消"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/Text36"/>
     </RelativeLayout>
 
 </LinearLayout>
