--- a/app/src/main/res/layout/item_write_daysum.xml
+++ b/app/src/main/res/layout/item_write_daysum.xml
@@ -97,6 +97,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/ll_complete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
