--- a/app/src/main/res/layout/popupwindow_title.xml
+++ b/app/src/main/res/layout/popupwindow_title.xml
@@ -19,7 +19,7 @@
     <LinearLayout
         android:id="@+id/cancle_onlick"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="match_parent"
         android:minHeight="400dp"
         android:background="#40000000"
         android:orientation="vertical" />
