--- a/app/src/main/res/layout/activity_client_library.xml
+++ b/app/src/main/res/layout/activity_client_library.xml
@@ -16,7 +16,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#e9edf2"
+        android:background="@color/lineColor"
         />
 
     <com.wtcrmandroid.view.pulltorefresh.SwipeToLoadLayout
