--- a/app/src/main/res/layout/frgment_batlefield_report.xml
+++ b/app/src/main/res/layout/frgment_batlefield_report.xml
@@ -1,26 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:background="#fff">
+        android:layout_height="50dp"
+        android:background="#fff"
+        android:gravity="center_vertical">
 
-        <com.wtcrmandroid.view.custompricing.TitleSwitchItem
-            android:id="@+id/tsi_right"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="战报日期"
+            android:textColor="@color/colorContext"
+            android:textSize="16sp" />
 
-        <com.wtcrmandroid.view.custompricing.TitleSwitchItem
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+        <TextView
+            android:id="@+id/tv_start_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="2017-06-01"
+            android:textColor="@color/colorIconText"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="20dp"
+            android:layout_height="1dp"
+            android:layout_marginLeft="15dp"
+            android:background="@color/colorContext"/>
+
+        <TextView
+            android:id="@+id/tv_end_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="2017-06-30"
+            android:textColor="@color/colorIconText"
+            android:textSize="16sp" />
     </LinearLayout>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_dayplan_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="10dp"
+        app:tabTextAppearance="@style/ContentText"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
