--- a/app/src/main/res/layout/item_team_ranking.xml
+++ b/app/src/main/res/layout/item_team_ranking.xml
@@ -2,84 +2,63 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F6F7"
+    android:background="#fff"
     android:orientation="vertical">
 
-    <LinearLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#fff"
-        android:gravity="center_vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="战报日期"
-            android:textColor="@color/colorContext"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/tv_start_data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="2017-06-01"
-            android:textColor="@color/colorIconText"
-            android:textSize="16sp" />
-
-        <View
-            android:layout_width="20dp"
-            android:layout_height="1dp"
-            android:layout_marginLeft="15dp"
-            android:background="@color/colorContext" />
-
-        <TextView
-            android:id="@+id/tv_end_data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:text="2017-06-30"
-            android:textColor="@color/colorIconText"
-            android:textSize="16sp" />
-    </LinearLayout>
+        android:layout_height="10dp"
+        android:background="#F5F6F7" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#fff">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_wt"
+            android:id="@+id/tv_team_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp"
-            android:text="物通"
+            android:text="飞虎队"
             android:textColor="@color/colorIconText"
             android:textSize="@dimen/text_size_18" />
 
         <TextView
-            android:id="@+id/tv_wt_money"
+            android:id="@+id/tv_captain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:text="2546"
-            android:textColor="#f76129"
-            android:textSize="@dimen/text_size_18" />
+            android:layout_alignLeft="@+id/tv_team_name"
+            android:layout_below="@+id/tv_team_name"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:text="队长：小飞"
+            android:textColor="@color/colorContext"
+            android:textSize="@dimen/text_size_14" />
+
+        <TextView
+            android:id="@+id/tv_people_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/tv_captain"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@+id/tv_captain"
+            android:text="队员数量：4"
+            android:textColor="@color/colorContext"
+            android:textSize="@dimen/text_size_14" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_wt"
-            android:layout_toLeftOf="@+id/tv_wt_money"
-            android:text="￥"
-            android:textColor="#f76129"
-            android:textSize="@dimen/text_size_12" />
+
+            android:layout_alignBottom="@+id/tv_captain"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/tv_team_name"
+            android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:text="第4名"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/text_size_14" />
     </RelativeLayout>
 
     <View
@@ -89,8 +68,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -103,12 +81,12 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="电销新"
+                android:text="当日到单"
                 android:textColor="@color/colorContext"
                 android:textSize="@dimen/text_size_14" />
 
             <TextView
-                android:id="@+id/tv_new"
+                android:id="@+id/tv_orders"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_a"
@@ -137,12 +115,12 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="电销续"
+                android:text="当日到款（元）"
                 android:textColor="@color/colorContext"
                 android:textSize="@dimen/text_size_14" />
 
             <TextView
-                android:id="@+id/tv_continue"
+                android:id="@+id/tv_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_b"
@@ -171,12 +149,12 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="电销总额"
+                android:text="总单数"
                 android:textColor="@color/colorContext"
                 android:textSize="@dimen/text_size_14" />
 
             <TextView
-                android:id="@+id/tv_total"
+                android:id="@+id/tv_total_orders"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_c"
@@ -197,8 +175,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -211,12 +188,12 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="市场"
+                android:text="订单金额（元）"
                 android:textColor="@color/colorContext"
                 android:textSize="@dimen/text_size_14" />
 
             <TextView
-                android:id="@+id/tv_market"
+                android:id="@+id/tv_order_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_d"
@@ -245,12 +222,12 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="招商"
+                android:text="续单金额（元）"
                 android:textColor="@color/colorContext"
                 android:textSize="@dimen/text_size_14" />
 
             <TextView
-                android:id="@+id/tv_merchants"
+                android:id="@+id/tv_continue_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_e"
@@ -271,135 +248,29 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/lineColor" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#fff">
-
-        <TextView
-            android:id="@+id/tv_sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:text="食品"
-            android:textColor="@color/colorIconText"
-            android:textSize="@dimen/text_size_18" />
-
-        <TextView
-            android:id="@+id/tv_sp_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:text="5455"
-            android:textColor="#f76129"
-            android:textSize="@dimen/text_size_18" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_sp"
-            android:layout_toLeftOf="@+id/tv_sp_money"
-            android:text="￥"
-            android:textColor="#f76129"
-            android:textSize="@dimen/text_size_12" />
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/lineColor" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff">
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <TextView
-                android:id="@+id/tv_g"
+                android:id="@+id/tv_f"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="食品新"
+                android:text="总金额（元）"
                 android:textColor="@color/colorContext"
                 android:textSize="@dimen/text_size_14" />
 
             <TextView
-                android:id="@+id/tv_sp_new"
+                android:id="@+id/tv_total_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_g"
+                android:layout_below="@+id/tv_f"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
                 android:text="4"
-                android:textColor="@color/colorIconText"
+                android:textColor="#f76129"
                 android:textSize="@dimen/text_size_20" />
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/lineColor" />
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/tv_h"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:text="食品续"
-                android:textColor="@color/colorContext"
-                android:textSize="@dimen/text_size_14" />
-
-            <TextView
-                android:id="@+id/tv_sp_continue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_h"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
-                android:text="4"
-                android:textColor="@color/colorIconText"
-                android:textSize="@dimen/text_size_20" />
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/lineColor" />
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
 
         </RelativeLayout>
     </LinearLayout>
@@ -408,42 +279,4 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/lineColor" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#fff">
-
-        <TextView
-            android:id="@+id/tv_z"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:text="销售总额"
-            android:textColor="@color/colorIconText"
-            android:textSize="@dimen/text_size_18" />
-
-        <TextView
-            android:id="@+id/tv_z_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:text="5455"
-            android:textColor="#f76129"
-            android:textSize="@dimen/text_size_18" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_z"
-            android:layout_toLeftOf="@+id/tv_z_money"
-            android:text="￥"
-            android:textColor="#f76129"
-            android:textSize="@dimen/text_size_12" />
-    </RelativeLayout>
 </LinearLayout>
