--- a/app/src/main/res/layout/layout_area_pop_up_window.xml
+++ b/app/src/main/res/layout/layout_area_pop_up_window.xml
@@ -7,7 +7,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#e9edf2"
+            />
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_area_pop_window"
             android:layout_width="match_parent"
