--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,6 +69,7 @@
                     </RelativeLayout>
 
                     <TextView
+                        android:id="@+id/tv_document_process"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
