--- a/app/src/main/res/layout/item_field.xml
+++ b/app/src/main/res/layout/item_field.xml
@@ -29,6 +29,7 @@
             android:paddingBottom="15dp">
 
             <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -42,6 +43,7 @@
                 android:layout_marginTop="10dp">
 
                 <TextView
+                    android:id="@+id/tv_describe"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="物通营销一部员工   打卡次数："
@@ -49,6 +51,7 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/tv_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4"
